--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -29,6 +29,31 @@
     </div>
 </div>
 <!-- copyright section end -->
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+
+<!-- <% if (flash.success.length) { %>
+    <script>
+        swal({
+            title: "Good job!",
+            text: "<%= flash.success %>",
+            icon: "success", 
+        });
+    </script>
+<% } %>
+
+<% if (flash.error.length) { %>
+    <script>
+        swal({
+            title: "Error!",
+            text: "<%= flash.error %>",
+            icon: "error",
+        });
+    </script>
+<% } %> -->
+
+
+
 <!-- Javascript files-->
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
