--- a/views/pages/changePassword.ejs
+++ b/views/pages/changePassword.ejs
@@ -58,7 +58,7 @@
                     <div class="col-12">
                         <div class="input-group mb-3">
                             <input type="password" class="form-control form-control-lg" placeholder="CurrentPassword"
-                                aria-label="Password" name="current_password"  />
+                                aria-label="Password" name="current_password" />
                         </div>
                         <div class="input-group mb-3">
                             <input type="password" class="form-control form-control-lg" placeholder="NewPassword"
@@ -66,7 +66,7 @@
                         </div>
                         <div class="input-group mb-3">
                             <input type="password" class="form-control form-control-lg" placeholder="ConfirmPassword"
-                                aria-label="Password" name="confirm_password"  />
+                                aria-label="Password" name="confirm_password" />
                         </div>
                     </div>
                 </div>
@@ -80,8 +80,33 @@
     </main>
 
     <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+
+    <% if (flash.success.length) { %>
+        <script>
+            swal({
+                title: "Good job!",
+                text: "<%= flash.success %>",
+                icon: "success",
+            });
+        </script>
+        <% } %>
+
+            <% if (flash.error.length) { %>
+                <script>
+                    swal({
+                        title: "Error!",
+                        text: "<%= flash.error %>",
+                        icon: "error",
+                    });
+                </script>
+                <% } %>
+
+
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                        crossorigin="anonymous"></script>
 </body>
 
 </html>
