--- a/views/pages/signin.ejs
+++ b/views/pages/signin.ejs
@@ -79,8 +79,33 @@
     </main>
 
     <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+
+    <% if (flash.success.length) { %>
+        <script>
+            swal({
+                title: "Good job!",
+                text: "<%= flash.success %>",
+                icon: "success",
+            });
+        </script>
+        <% } %>
+
+            <% if (flash.error.length) { %>
+                <script>
+                    swal({
+                        title: "Error!",
+                        text: "<%= flash.error %>",
+                        icon: "error",
+                    });
+                </script>
+                <% } %>
+
+
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                        crossorigin="anonymous"></script>
 </body>
 
 </html>
